<resources>
    <string name="app_name">QIS+ Noten</string>
    <string name="login_subtitle">Melde dich mit deinen Hochschul-Zugangsdaten an</string>
    <string name="username_hint">Benutzername</string>
    <string name="password_hint">Passwort</string>
    <string name="new_password_hint">Neues Passwort (leer = unverändert)</string>
    <string name="login_action">Anmelden</string>
    <string name="grades_title">Notenspiegel</string>
    <string name="settings_title">Einstellungen</string>
    <string name="retry_action">Erneut versuchen</string>
    <string name="logout_action">Abmelden</string>
    <string name="save_action">Speichern</string>
    <string name="display_options_title">Ansicht</string>
    <string name="display_section_title">Anzeige</string>
    <string name="hide_studienleistungen">Zeilen mit Studienleistung ausblenden</string>
    <string name="average_section_title">Notenschnitt berechnen aus</string>
    <string name="average_mode_all">Allen bestandenen Versuchen</string>
    <string name="average_mode_last">Nur dem letzten Versuch</string>
    <string name="average_mode_best">Nur der besten Note</string>
    <string name="fields_title">Angezeigte Felder</string>
    <string name="field_semester">Semester</string>
    <string name="field_note">Note</string>
    <string name="field_versuch">Versuch</string>
    <string name="field_datum">Datum</string>
    <string name="colors_title">Farben</string>
    <string name="reset_colors_action">Standardfarben wiederherstellen</string>
    <string name="kpi_average_label">Schnitt</string>
    <string name="kpi_ects_label">ECTS</string>
    <string name="filter_all">Alle</string>
    <string name="filter_open">Offen</string>
    <string name="sort_grade">Note</string>
    <string name="sort_semester">Semester</string>
    <string name="sort_default">Sortieren</string>
    <string name="sort_none">Keine</string>
    <string name="profile_section_title">Profil</string>
    <string name="semester_hint">Semester</string>
    <string name="target_ects_hint">Ziel-ECTS (automatisch)</string>
    <string name="new_badge">Neu</string>
    <string name="notifications_section_title">Benachrichtigungen</string>
    <string name="notify_new_grades">Neue Noten melden</string>
    <string name="notifications_footer">Die App prüft im Hintergrund gelegentlich auf neue Noten und benachrichtigt dich. Der genaue Zeitpunkt wird vom System bestimmt, Meldungen können sich daher verzögern.</string>
    <string name="notifications_denied_message">Erlaube Benachrichtigungen für QIS+ in den Systemeinstellungen, um über neue Noten informiert zu werden.</string>
    <string name="notification_single_title">Neue Note</string>
    <string name="notification_multiple_title">Neue Noten</string>
    <string name="debug_test_refresh">Hintergrund-Abruf jetzt testen (Debug)</string>
    <string name="debug_reset_baseline">Benachrichtigungs-Baseline zurücksetzen (Debug)</string>

    <string name="degree_setup_title">Fast geschafft</string>
    <string name="degree_setup_subtitle">QIS hat für deinen Account mehrere Möglichkeiten gemeldet. Wähle aus, welche Noten angezeigt werden sollen, das lässt sich später jederzeit in den Einstellungen ändern.</string>
    <string name="degree_setup_abschluss_label">Abschluss-Typ</string>
    <string name="degree_setup_studiengang_label">Studiengang</string>
    <string name="degree_setup_confirm_action">Übernehmen</string>

    <string name="abschluss_label">Abschluss-Typ</string>
    <string name="studiengang_label">Studiengang</string>
    <string name="degree_profile_footer">QIS meldet mehrere Möglichkeiten für deinen Account. Wähle aus, welche Noten angezeigt werden sollen.</string>

    <string name="archive_action">Archivieren</string>
    <string name="restore_action">Einblenden</string>
    <string name="archived_section_title">Archiviert</string>
    <string name="include_in_average">In Schnitt einbeziehen</string>
    <string name="no_semester_section_title">Ohne Semester</string>
</resources>
